--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,18 +3,87 @@ title: Periodic Table Visualization
 description: Interactive 3D periodic table with element properties visualization
 baseurl: "/periodic"
 url: "https://dfrostar.github.io"
+
+# Theme settings
+logo: "/assets/images/logo.png"
+favicon_ico: "/assets/images/favicon.ico"
+search_enabled: true
+search:
+  heading_level: 2
+  previews: 3
+  preview_words_before: 5
+  preview_words_after: 10
+  tokenizer_separator: /[\s/]+/
+  rel_url: true
+  button: true
+
+# External navigation links
 aux_links:
   "View on GitHub": "https://github.com/dfrostar/periodic"
-heading_anchors: true
+  "Interactive Demo": "https://dfrostar.github.io/periodic/demo"
+aux_links_new_tab: true
+
+# Footer settings
+footer_content: "Copyright &copy; 2025 dfrostar. Distributed under an MIT license."
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
+# Color scheme
 color_scheme: light
-search_enabled: true
+callouts:
+  warning:
+    title: Warning
+    color: yellow
+  note:
+    title: Note
+    color: blue
+  tip:
+    title: Tip
+    color: green
+  important:
+    title: Important
+    color: red
+
+# Enable copy code buttons
 enable_copy_code_button: true
+
+# Google Analytics (if needed)
+# ga_tracking: UA-XXXXXXXXX-X
+# ga_tracking_anonymize_ip: true
+
+# Exclude files from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor
+
+# Collections for better documentation organization
+collections:
+  components:
+    permalink: "/:collection/:path/"
+    output: true
+  guides:
+    permalink: "/:collection/:path/"
+    output: true
+
+# Collection order
+just_the_docs:
+  collections:
+    components:
+      name: Components
+    guides:
+      name: Guides
+
+# Heading anchor links
+heading_anchors: true
 
 # Navigation structure
 nav_external_links:
-  - title: Project Repository
-    url: https://github.com/dfrostar/periodic
+  - title: Live Demo
+    url: https://dfrostar.github.io/periodic/demo
     hide_icon: false
-
-# Footer content
-footer_content: "Copyright &copy; 2025 dfrostar. Distributed under an MIT license."
+  - title: API Documentation
+    url: https://dfrostar.github.io/periodic/api
