--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "npm run export && gh-pages -d out"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
     "@tanstack/react-query": "^5.8.4",
     "d3": "^7.8.5",
     "next": "^14.1.0",
@@ -20,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-three-fiber": "^6.0.13",
     "three": "^0.158.0",
+    "three-stdlib": "^2.35.14",
     "troika-three-text": "^0.49.0",
     "zustand": "^4.4.6"
   },
