--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "deploy": "npm run export && gh-pages -d out"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@tanstack/react-query": "^5.8.4",
     "d3": "^7.8.5",
     "next": "^14.1.0",
